2008-07-01  Matthew Barnes  <mbarnes@redhat.com>

	** Fixes part of bug #540282

	* apps_evolution_shell.schemas.in:
	Remove the "printing" GConf key.  We use a key file now.

2008-06-10  Matthew Barnes  <mbarnes@redhat.com>

	* test/evolution-test-component.c:
	Use <glib/gi18n.h> instead of <bonobo/bonobo-i18n.h>.

2008-05-22  Matthew Barnes  <mbarnes@redhat.com>

	** Fixes part of bug #534360

	* e-component-view.h:
	* e-corba-config-page.h:
	* e-history.h:
	* e-shell-folder-title-bar.h:
	* e-shell-settings-dialog.h:
	* e-shell-view.h:
	* e-shell.h:
	* e-user-creatable-items-handler.h:
	* evolution-config-control.h:
	Migrate from deprecated GtkObject symbols to GObject equivalents.

2008-05-08  Matthew Barnes  <mbarnes@redhat.com>

	** Fixes part of bug #525241 (EPluginUI)

	* main.c (main): Register the EPluginUIHook type.

2008-05-08  Tor Lillqvist  <tml@novell.com>

	* main.c (main) [Win32]: If no message catalog is installed for
	the current locale language, don't bother with the localisations
	provided by other things then either. Reset thread locale to
	"en-US" and C library locale to "C" to ensure that. This fixes the
	problem where those items in the UI that don't originate from
	message catalogs still appear translated even though message
	catalogs were not installed.

2008-04-29  Akhil Laddha  <lakhil@novell.com>

	** Fix for bug #529660

	* main.c (show_development_warning): Change stable version to 2.22.1

2008-04-26  James Westby  <jw+debian@jameswestby.net>

	** Fix for bug #518103

	* e-shell-nm-glib.c: (e_shell_glib_network_monitor):
	* e-shell-nm.c: (e_shell_network_monitor):
	* e-shell.c: (e_shell_construct):
	Check online status from NetworkManager at startup instead of using the
	last-used-state.

2008-04-17  Milan Crha  <mcrha@redhat.com>

	** Part of fix for bug #526739

	* e-shell-window-commands.c: (command_quick_reference):
	Use gio instead of gnome-vfs.

2008-04-07  Ondrej Jirman  <megous@megous.com>

	** Fix for bug #525238
