@@ -1,3 +1,9 @@
+2008-07-10  Matthew Barnes  <mbarnes@redhat.com>
+
+	* e-history.[ch]:
+	Remove these files.  They were written in 2002 and, AFACIT,
+	never used for anything.
+
 2008-07-01  Matthew Barnes  <mbarnes@redhat.com>
 
 	** Fixes part of bug #540282
